--- a/TemporaTasks.csproj
+++ b/TemporaTasks.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Resources\Icons\icon.ico</ApplicationIcon>
+	<Version>0.0.1.0-beta.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
