Quick edit time with `t` shortcut

--- a/TemporaTasks.csproj
+++ b/TemporaTasks.csproj
@@ -25,4 +25,10 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="UserControls\DateTimeChangerPopup.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
