--- a/.github/workflows/weekly-auto-release.yml
+++ b/.github/workflows/weekly-auto-release.yml
@@ -3,6 +3,7 @@ name: Weekly Auto-Release
 on:
   schedule:
     - cron: '0 0 * * 1'
+  workflow_dispatch:
 
 jobs:
   build-and-release:
@@ -13,9 +14,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Setup GitHub CLI
-        uses: cli/cli-action@v2
 
       - name: Check for new commits since last release
         id: check_commits
