--- a/.github/workflows/weekly-auto-release.yml
+++ b/.github/workflows/weekly-auto-release.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Get current date
         if: steps.check_commits.outputs.should_release == 'true'
         id: date
-        run: echo "date=$(date +'%Y%m%d')" >> $GITHUB_OUTPUT
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
         shell: bash
 
       - name: Create GitHub Release
